// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button.svelte renders correctly 1`] = `
<body>
  <div>
    <button
      class="button svelte-43imro"
    />
  </div>
</body>
`;

exports[`Button.svelte renders correctly when disabled 1`] = `
<body>
  <div>
    <button
      class="button svelte-43imro"
      disabled=""
    />
  </div>
</body>
`;
